log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
      containers:
        - name: log-output-reader
          image: aeriihia/log-output-reader:v1
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/files
        - name: log-output-writer
          image: aeriihia/log-output-writer:v1
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/files
